[package]
name = "shvclient-rs"
version = "0.3.0"
edition = "2021"

[lib]
name = "shvclient"
path = "src/lib.rs"

[[example]]
name = "simple_device_tokio"
path = "src/examples/simple_device_tokio.rs"
required-features = ["tokio"]

[[example]]
name = "simple_device_async_std"
path = "src/examples/simple_device_async_std.rs"
required-features = ["async_std"]

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
simple_logger = { git = "https://github.com/fvacek/rust-simple_logger.git", branch = "main", features = ["stderr"] }

[dependencies]
shvproto = { git = "https://github.com/silicon-heaven/libshvproto-rs", branch = "master", version = "3.0.0" }
shvrpc = { git = "https://github.com/silicon-heaven/libshvrpc-rs", branch = "master", version = "3.0.0" }
futures = "0.3.29"
futures-time = "3.0.0"
futures-net = "0.6.0"
url = "2.4.1"
log = "0.4.20"
duration-str = "0.11.2"
async-broadcast = "0.7.1"
async-std = { version = "1.12.0", features = ["attributes"], optional = true }
tokio = { version = "1.36.0", features = ["full"], optional = true }
tokio-util = { version = "0.7.10", features = ["compat"], optional = true }
generics-alias = { git = "https://github.com/j4r0u53k/generics-alias-rs.git", branch = "main" }

# NOTE: macro_magic needs to be here as a direct dependency because some functions from
# there are called in expansion of `generics_inner` macro from generics-alias crate.
macro_magic = "0.5.0"

[features]
default = ["tokio"]
tokio = ["dep:tokio", "dep:tokio-util"]
async_std = ["dep:async-std"]
